# pgs_change_mgmt

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
change_mgmt/: authoring_fields.json
change_mgmt/templates/: 0_agent_context_template_v0.md  1_change_request_template_v0.md  2_domain_model_template_v0.md  3_analysis_loop_template_v0.md  4_business_model_template_v0.md  5_business_intent_template_v0.md  6_governance_intent_template_v0.md  6b_design_intent_template_v0.md  7_authoring_mandate_template_v0.md  8_authoring_manifest_template_v0.md  8_build_sheet_template_v0.md  9_construction_record_template_v0.md
doc/: CONSTRUCTION_MODEL_V0.md  CSI_FINDING_001.md
pgs_change_mgmt/: __init__.py
pgs_change_mgmt/contracts/: __init__.py  authoring_completeness.py  evaluator.py  gov_projection.py  grounding.py  provenance.py  renderer.py  worker.py
pgs_change_mgmt/engine/: __init__.py  _authoring_completeness_selftest.py  _build_sheet_selftest.py  _compilation_unit_selftest.py  _construction_cli_selftest.py  _construction_model_selftest.py  _construction_selftest.py  _design_review_selftest.py  _disposition_gate_selftest.py  _dossier_selftest.py  _dossier_structured_selftest.py  _e2e_execution_selftest.py  _fixture.py  _governance_impact_selftest.py  _guided_validation_selftest.py  _migrate_cr_ir_from_baseline.py  _migrate_handoff_from_baseline.py  _placement_selftest.py  _projection_fidelity_selftest.py  _roundtrip_equivalence_selftest.py  _selftest.py  _semantic_preservation_gate_selftest.py  _stage_package_selftest.py  _trifecta_selftest.py  authoring_completeness.py  bridge.py  build_sheet.py  cli.py  compilation_unit.py  construct_chain.py  construction_cli.py  construction_model.py  design_review.py  disposition_gate.py  dossier.py  engine.py  governance_surface.py  guided_validation.py  lifecycle_cli.py  oracle.py  (+10 more)
pgs_change_mgmt/evaluator/: __init__.py  _belief_preservation_selftest.py  _disposition_completeness_selftest.py  belief_preservation.py  build_sheet_oracle.py  construction_oracle.py  convergence.py  design_intent_oracle.py  disposition_completeness.py  evaluator.py  identity_audit.py  (+4 more)
scripts/: verify_change_mgmt_engine.sh
(+131 files in other folders)
