[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pgs_change_mgmt"
version = "0.7.0"
description = "PGS Change Management Engine — the governance projection engine: a worker-agnostic coordination layer over the compiler (admissibility) and runtime (execution)."
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[tool.setuptools.packages.find]
include = ["pgs_change_mgmt*"]
